<resources>
    <string name="app_name">TripApp</string>

    <string name="ticket_hour_u"><u>Hour ticket</u></string>
    <string name="ticket_day_u"><u>Day ticket</u></string>
    <string name="ticket_week_u"><u>Week ticket</u></string>
    <string name="ticket_month_u"><u>Month ticket</u></string>

    <string name="login_failed">Wrong credentials, try again.</string>
    <string name="registration_successful">Registration successful. Please log in.</string>
    <string name="registration_failed">Registration failed or username already exists!</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Collecting data. Please wait...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket_duration">Ticket duration: </string>
    <string name="ticket_price">Ticket Price: </string>
    <string name="total_price">Total Price: </string>
    <string name="eur">EUR</string>
    <string name="no_of_cards">No. of tickets:</string>
    <string name="keep_in_mind">Keep in mind that ticket becomes valid 10 minutes after purchase</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="number_of_tickets">Number of tickets:</string>
    <string name="ticket_type">Ticket type:</string>
    <string name="ticket_status">Ticket status:</string>
    <string name="valid_from">Valid from:</string>
    <string name="valid_through">Valid through:</string>
    <string name="ticket_bought">Ticket bought:</string>
    <string name="purchase_info">Purchase info</string>
    <string name="ticket_title">Your ticket</string>
    <string name="ticket_price_label">Ticket price:</string>
    <string name="eur_per_ticket">EUR per ticket</string>

    <string name="home_title">Purchase tickets</string>
    <string name="ticket_info_title">My ticket</string>
    <string name="ticket_history_title">All tickets</string>
    <string name="ticket_purchase_title">Buy ticket</string>
    <string name="account_balance_title">Account balance</string>
    <string name="ticket_scanned_title">Scanned tickets</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="newUser">Welcome new user</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="commuting_partner">Your Commuting Partner</string>

    <string name="action_settings">Settings</string>
    <string name="button_onehourticket">Hour ticket</string>
    <string name="button_onedayticket">Day ticket</string>
    <string name="button_oneweekticket">Week ticket</string>
    <string name="button_onemonthticket">Month ticket</string>
    <string name="main_activity_greeting">Please select your ticket type!</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="current_state">Balance:</string>
    <string name="payment_history">Payment history:</string>
    <string name="button_add_money">Add money</string>
    <string name="no_payment_history">There are no payments to be displayed</string>

    <string name="expired_label_big">EXPIRED</string>
    <string name="valid_label_big">VALID</string>

    <string name="scanned_label">Tickets you have scanned:</string>
    <string name="no_scanned_tickets">There are no scanned tickets to be displayed</string>

    <string name="active_label">Active tickets:</string>
    <string name="expired_label">Expired tickets:</string>
    <string name="no_active_tickets">There are no active tickets at the moment</string>
    <string name="no_history_tickets">There are no expired tickets to be displayed</string>

    <string name="notifications">Notifications</string>
    <string name="notifications_turn">Turn On/Off notifications</string>
    <string name="notifications_disabled">Application notifications are disabled</string>
    <string name="notifications_enabled">Application notifications are enabled</string>
    <string name="notifications_time">Notifications time</string>
    <string name="notifications_time_desc">Set number of minutes for how long in advance you want to recive notifications</string>
    <string name="history">History</string>
    <string name="payments_history">Payments history</string>
    <string name="payments_history_desc">Display payments occurred in the chosen period</string>
    <string name="tickets_history">Tickets history</string>
    <string name="tickets_history_desc">Display tickets occurred in the chosen period</string>
    <string name="scanned_history">Scanned tickets history</string>
    <string name="scanned_history_desc">Display scanned tickets occurred in the chosen period</string>

    <string name="scanned_ticket_validity_label">Ticket is:</string>
    <string name="title_activity_map">MapActivity</string>


</resources>
