<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:id="@+id/notifications_category"
        android:title="@string/notifications">

        <CheckBoxPreference
            android:id="@+id/notifications_choose"
            android:key="notifications_on"
            android:defaultValue="true"
            android:title="@string/notifications_turn"
            android:summaryOff="@string/notifications_disabled"
            android:summaryOn="@string/notifications_enabled" />

        <ListPreference
            android:id="@+id/notifications_time"
            android:key="notifications_time"
            android:title="@string/notifications_time"
            android:dependency="notifications_on"
            android:entries="@array/notification_times_display"
            android:entryValues="@array/notification_times_values"
            android:defaultValue="10"
            android:summary="@string/notifications_time_desc"/>


    </PreferenceCategory>

</PreferenceScreen>