<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.icf.tripappclient.activities.RegisterActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/background" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/lastNameInput"
        android:hint="@string/firstName"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/usernameInput"
        android:hint="@string/lastName"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/firstNameInput"
        android:textSize="@dimen/text_value"
        android:text="@string/newUser"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/passwordInput"
        android:hint="@string/username"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/registerButton"
        android:hint="@string/password"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SingleButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:onClick="registerClicked"
        android:text="@string/register" />

</RelativeLayout>
