<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollHorizontally="false"
    tools:context="com.example.icf.tripappclient.TicketPurchaseVertical"
    android:paddingBottom="30dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ticket"/>

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/durationValue"
        android:text="@string/ticket_duration" />

    <TextView
        android:id="@+id/durationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/priceValue"
        android:layout_toRightOf="@+id/durationLabel"
        android:textSize="20dp"
        android:text="This ticket last 24 hours asdf asdf addfad cxvz" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/priceValue"
        android:layout_alignBaseline="@+id/priceValue"
        android:text="@string/ticket_price" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/durationLabel"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/reminder"
        android:textSize="30dp"
        android:text="10.99" />

    <TextView
        android:id="@+id/priceCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/priceValue"
        android:layout_toRightOf="@+id/priceValue"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/priceValue"
        android:text="@string/eur" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/buyButton"
        android:text="@string/keep_in_mind" />

    <Button
        android:id="@+id/buyButton"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:height="60dp"
        android:width="180dp"
        android:text="@string/buy_ticket" />

</RelativeLayout>
