<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.icf.tripappclient.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppBarOverlay">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/onehourticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/button_onehourticket"
                android:onClick="buyOneHourTicket"
                />
            <Button
                android:id="@+id/onedayticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/button_onedayticket"
                android:onClick="buyOneDayTicket"
                />
            <Button
                android:id="@+id/oneweekticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/button_oneweekticket"
                android:onClick="buyWeekDayTicket"
                />
            <Button
                android:id="@+id/onemonthticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/button_onemonthticket"
                android:onClick="buyMonthDayTicket"
                />
        </GridLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
