<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    tools:context="com.example.icf.tripappclient.fragments.TicketPurchase"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:columnCount="4" >

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ticket"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/durationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/lightBlue"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="24 hours ticket" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_marginRight="5dp"
        android:text="@string/ticket_price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="1"
        android:layout_row="2"
        android:text="10.99"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/priceCurrency"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_marginLeft="5dp"
        android:text="@string/eur"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/numberLabel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginRight="5dp"
        android:text="@string/no_of_cards"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/numberValue"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnSpan="3"
        android:entries="@array/ticket_numbers"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginRight="5dp"
        android:text="@string/total_price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:gravity="right"
        android:text="10.99"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/totalCurrency"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="3"
        android:layout_row="4"
        android:layout_marginLeft="5dp"
        android:text="@string/eur"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="4"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy_ticket" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnSpan="4"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/keep_in_mind" />

</GridLayout>