<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context="com.example.icf.tripappclient.fragments.TicketHistory" >

    <TextView
        android:id="@+id/activeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/active_label"
        android:textSize="@dimen/text_header_small" />

    <TextView
        android:id="@+id/emptyActiveLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/no_active_tickets"
        android:textSize="@dimen/text_header_medium"
        android:visibility="gone" /><!-- Koristiti za prikaz/sakrivanje labele (iskljucivo: visible/gone) -->

    <ListView
        android:id="@+id/validTicketsList"
        android:layout_height="180dp"
        android:layout_width="wrap_content" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/lightBlue" />

    <TextView
        android:id="@+id/expiredLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/expired_label"
        android:textSize="@dimen/text_header_small" />


    <TextView
        android:id="@+id/emptyHistoryLabel"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        android:text="@string/no_history_tickets"
        android:textSize="@dimen/text_header_medium"
        android:visibility="gone" /> <!-- Koristiti za prikaz/sakrivanje labele (iskljucivo: visible/gone) -->

    <ListView
        android:id="@+id/expiredTicketsList"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" >
    </ListView>


</LinearLayout>