<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginVertical">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/usernameInput"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/background" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/passwordInput"
        android:hint="@string/username"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/loginButton"
        android:hint="@string/password"
        android:textSize="@dimen/text_value"
        android:layout_marginTop="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SingleButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:onClick="loginClicked"
        android:text="@string/login" />

</RelativeLayout>
